--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@mysten/sui.js": "^0.49.1",
+    "axios": "^1.6.5",
+    "fs": "^0.0.1-security",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
